# flat-json

./: README.md  flat-json.cabal  up.json
src/Database/Flat/: JSON.hs
src/Database/Flat/JSON/: AuditTrail.hs  Read.hs  ReadOnly.hs  SQL.hs  Table.hs  Types.hs  Update.hs
src/Web/Scotty/CRUD/: SQL.hs  Types.hs
tools/: Main.hs
