name:                flat-json
version:             0.1.0
synopsis:            Flat file JSON record, with CRUD API
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
Copyright:           Copyright (c) 2015 The University of Kansas
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Web.Scotty.CRUD,
                       Web.Scotty.CRUD.JSON,
                       Web.Scotty.CRUD.SQL,
                       Web.Scotty.CRUD.Types,
                       Database.Flat.JSON,
                       Database.Flat.JSON.Table,
                       Database.Flat.JSON.Types
  -- other-modules:
  other-extensions:    FlexibleInstances,
                       OverloadedStrings,
                       ScopedTypeVariables,
                       TypeFamilies,
                       TypeSynonymInstances
  build-depends:       aeson                >= 0.7  && < 0.10,
                       attoparsec           >= 0.13 && < 0.14,
                       base                 >= 4.6  && < 4.9,
                       bytestring           >=0.10  && < 0.11,
                       http-types           >= 0.8.5,
                       scotty               >= 0.8  && < 0.11,
                       stm                  >= 2.4  && < 2.5,
                       text                 >= 1.1  && < 1.3,
                       time                 >= 1.5  && < 1.6,
                       transformers         >= 0.3  && < 0.5,
                       natural-transformation >= 0.2.1,
                       unordered-containers >= 0.2  && < 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  Ghc-options:         -Wall

executable crud
    build-depends:     flat-json,
                       aeson                >= 0.9  && < 0.10,
                       base                 >= 4.6,
                       bytestring           >= 0.10 && < 0.11,
                       containers           >= 0.5  && < 0.6,
                       scientific           >= 0.3.0,
                       text                 >= 1.1  && < 1.3,
                       transformers         >= 0.3  && < 0.5,
                       unordered-containers >= 0.2  && < 0.3,
                       wai                  >= 3.0  && < 3.1,
                       wai-extra            >= 3.0  && < 3.1
    main-is:           Main.hs
    hs-source-dirs:    tools
    default-language:  Haskell2010
    ghc-options:       -Wall

Test-Suite test-crud
    type:              exitcode-stdio-1.0
    main-is:           Core.hs
    other-modules:     QC
    hs-source-dirs:    tests
    other-extensions:  FlexibleInstances,
                       GADTs
                       OverloadedStrings,
                       ScopedTypeVariables,
                       TypeFamilies,
                       TypeOperators,
                       TypeSynonymInstances
    build-depends:     flat-json,
                       aeson                >= 0.9  && < 0.10,
                       base                 >= 4.6  && < 4.9,
                       directory            >= 1.2  && < 1.3,
                       QuickCheck           >= 2.8  && < 2.9,
                       scientific           == 0.3.*,
                       text                 >= 1.1  && < 1.3,
                       unordered-containers >= 0.2  && < 0.3,
                       vector               >= 0.10
    default-language:  Haskell2010
    ghc-options:       -Wall
